# gef

./: .editorconfig  .gitattributes  .gitignore  .mdlrc  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .tags  .tags_sorted_by_file  .travis.yml  404.html  Dockerfile  LICENSE  Makefile  README.md  binja_gef.py  gef.py  gef.sh  get-pip.py  ida_gef.py  index.html  mkdocs.yml  new-release.sh  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  sym.py  test.txt  todo
.ci/: mlc_config.json
.circleci/: config.yml
.github/: CONTRIBUTING.md  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  stale.yml
api/: index.html
compat/: index.html
config/: index.html
coverage/: class_index.html  coverage.json  coverage.xml  function_index.html  gef_py.html  index.html  status.json
debugging/: index.html
deprecated/: index.html
docker/: Dockerfile  docker-compose.yml
docs/: .markdownlint.yaml  api.md  commands.md  compat.md  config.md  debugging.md  deprecated.md  faq.md  features.md  index.md  install.md  requirements.txt  screenshots.md  testing.md
faq/: index.html
install/: index.html
obsolete/: mkdocs.yml
screenshots/: index.html
scripts/: binja_gef.py  gef-extras.sh  gef.sh  generate-api-docs.sh  generate-coverage-docs.sh  generate-settings-docs.sh  heapme.py  ida_gef.py  new-release.py  new-release.sh  remote_debug.py  run-remote-tests.sh  vscode_debug.py
search/: search_index.json
testing/: index.html
tests/: base.py  helpers.py  pylintrc  pytest.ini  requirements.txt  run-remote.sh  runtests.py  test-runner.py  utils.py
(+278 files in other folders)
